# PyleoTUPS

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  README.md  Test.ipynb  __init__.py  environment.yml  paper.bib  paper.md  pyproject.toml  python.ipynb  setup.py  test_pytups_reader.ipynb
.github/workflows/: citest.yml  publish.yaml
Examples/: PyTUPS.ipynb
Notes/Current methods and analysis/: README_NOAA_PARSERS.md
Notes/Interval Overlap analysis/: README.md  interval_overlap_anlysis.ipynb  test_interval.txt
Notes/Non-standard-parser/: CSV-Parser.md  non-standard-parser.md  non-std-parser.ipynb  test.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt
PyTUPS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
core/: noaa_studies.py
doc_build/source/: conf.py  index.rst  pytups.rst
docs/: advanced.rst  conf.py  index.rst  installation.rst  requirements.txt  rtd_env.yml  tutorials.rst
docs-deprecated/: conf.py  index.rst
docs-deprecated/source/: pytups.utils.rst
examples/: NOAAStudyWrapper.ipynb  Usage_NOAAStudyWrapper.ipynb  examples.ipynb  noaa_sample.ipynb  tutorial-noaa.ipynb  tutorial-pangaea.ipynb  tutorial.ipynb
pyleotups/core/: BaseDataset.py  Dataset.py  NOAADataset.py  PangaeaDataset.py  __init__.py
pyleotups/tests/: test_Dataset.py  test_ExcelParser.py  test_NOAADataset.py  test_NOAAStudyWrapper.py  test_NonStandardParser.py  test_NonStandardParserUtils.py  test_PangaeaDataset.py
pyleotups/utils/: NOAADataset.py  NOAAStudy.py  PaleoData.py  PangaeaStudy.py  Site.py  __init__.py
pytups/: __init__.py
pytups1.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
source/: conf.py  index.rst  modules.rst
std-par-venv/: pyvenv.cfg
std-parser/: pyvenv.cfg
tests/: test_noaa_studies.py
utils/: helper.py
(+46 files in other folders)
