[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyleotups*"]

[project]
name = "pyleotups"
version = "0.0.2b0"
description = "Automated Paleoclimate Data Extraction and Processing"
authors = [
  { name = "Dhiren Oswal", email = "linkedearth@gmail.com" },
  { name = "Deborah Khider", email = "linkedearth@gmail.com" },
  { name = "Jay Pujara", email = "linkedearth@gmail.com" }
]
license = { text = "Apache License 2.0" }
requires-python = ">=3.8"
dependencies = [
  "pandas==2.3.1",
  "requests",
  "numpy==1.26.4",
  "pybtex",
  "setuptools",
  "tqdm",
  "nbstripout"
]
keywords = ["pyleotups", "Table Understanding", "Data Analysis"]
urls = { Homepage = "https://github.com/LinkedEarth/pyleotups/pyleotups" }

[tool.setuptools]
license-files = []